# wndx_sane

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: cicd_cmake_multi_platform.yml
cmake/: Findcxxopts.cmake  Findfmt.cmake  Findgtest.cmake  comp_opts_cxx.cmake  fmt.cmake  funcs.cmake  gtest.cmake  wndx_sane-config.cmake.in  wndx_saneConfig.cmake.in  wndx_sane_coverage.cmake  wndx_sane_create_targets.cmake  wndx_sane_find.cmake  wndx_sane_funcs.cmake  wndx_sane_install.cmake  wndx_sane_memcheck.cmake  wndx_sane_modules.cmake  wndx_sane_package.cmake  wndx_sane_tgt_rm_opt.cmake
include/: aliases.hpp  config.hpp  log.hpp  log_level.hpp
include/wndx/sane/: aliases.hpp  config.hpp  file.hpp  ll.hpp  log.hpp  log_level.hpp  path.hpp  pl.hpp  rc.hpp  sig.hpp  sig_handler.hpp  sig_to_str.hpp
scripts/: wndx_cmake_build.sh
src/wndx/sane/: CMakeLists.txt  file.cpp  ll.cpp  log.cpp  path.cpp  pl.cpp  sig_handler.cpp
tests/units/: CMakeLists.txt  file.t.cpp
